Add runtime validation to RedisValue constructor
- Added validateDataType() method to ensure data matches the Type enum
- Validates String for STRING, List for LIST, Set for SET, Map for HASH/SORTED_SET
- Throws IllegalArgumentException with descriptive message on type mismatch
- Added unit tests to verify validation behavior
- Fixed Java 17 compatibility issues (replaced getFirst() with get(0))

Co-authored-by: unikdahal <61407386+unikdahal@users.noreply.github.com>